[package]
name = "tiktoken"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "tiktoken"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.27.0"
tiktoken-rs = "0.2.1"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
